--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,62 +60,43 @@
     <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerInputData.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Client\UnityClient.cs" />
     <Compile Include="Assets\Scripts\Server\ServerManager.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerDespawnData.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\UnityConsoleWriter.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\GameStartData.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\UnityServer.cs" />
     <Compile Include="Assets\Scripts\Server\PlayerServer.cs" />
     <Compile Include="Assets\Scripts\Client\LoginManager.cs" />
+    <Compile Include="Assets\ThirdParty\FreeFlyCamera\Scripts\FreeFlyCamera.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\GameUpdateData.cs" />
     <Compile Include="Assets\Scripts\Client\ConnectionManager.cs" />
+    <Compile Include="Assets\Scripts\Utility\CommandLineArgsHelper.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerSpawnData.cs" />
     <Compile Include="Assets\Scripts\Client\PlayerClient.cs" />
     <Compile Include="Assets\Scripts\Common\Buffer.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\LoginRequestData.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\NetworkingTags.cs" />
     <Compile Include="Assets\Scripts\Client\GameManager.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\LoginInfoData.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\UnityServerHelper.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Client\SerializableObjectCacheSettings.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerStateData.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\XmlUnityServer.cs" />
     <Compile Include="Assets\Scripts\Client\ReconciliationInfo.cs" />
     <Compile Include="Assets\Scripts\Server\ClientConnection.cs" />
     <Compile Include="Assets\Scripts\Client\PlayerInterpolation.cs" />
     <Compile Include="Assets\Scripts\Server\ServerInstance.cs" />
-    <Compile Include="Assets\Scripts\Common\NetworkingData\GameStartData.cs" />
-    <Compile Include="Assets\Scripts\Common\NetworkingData\GameUpdateData.cs" />
-    <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerDespawnData.cs" />
-    <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerStateData.cs" />
-    <Compile Include="Assets\Scripts\Common\NetworkingData\NetworkingTags.cs" />
-    <Compile Include="Assets\ThirdParty\FreeFlyCamera\Scripts\FreeFlyCamera.cs" />
+    <Compile Include="Assets\Scripts\Utility\SinglePlayerServer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMPro.cginc" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\DarkRift.Server.xml" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\DarkRift.dll" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Client\DarkRift.Client.dll" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\DarkRift.xml" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF.shader" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Client\DarkRift.Client.xml" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\ExampleConfiguration.xml" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\link.xml" />
     <None Include="Assets\ThirdParty\DarkRift\ReadMe.txt" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\DarkRift.Server.dll" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
-    <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_Sprite.shader" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
