--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Scripts\Utility\Debugging\CommandLineArgsHelper.cs" />
     <Compile Include="Assets\ThirdParty\FreeFlyCamera\Scripts\FreeFlyCamera.cs" />
     <Compile Include="Assets\Scripts\Utility\Debugging\Console\Input\DebugConsoleInput.cs" />
+    <Compile Include="Assets\Scripts\Utility\Debugging\DebugGraphs.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\GameUpdateData.cs" />
     <Compile Include="Assets\Scripts\Client\ConnectionManager.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerSpawnData.cs" />
@@ -82,24 +83,29 @@
     <Compile Include="Assets\Scripts\Client\PlayerClient.cs" />
     <Compile Include="Assets\Scripts\Common\Buffer.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\LoginRequestData.cs" />
+    <Compile Include="Assets\ThirdParty\DebugGUI\Attributes\DebugGUIGraphAttribute.cs" />
     <Compile Include="Assets\Scripts\Utility\SinglePlayerServer.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\NetworkingTags.cs" />
     <Compile Include="Assets\Scripts\Client\GameManager.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\LoginInfoData.cs" />
+    <Compile Include="Assets\ThirdParty\DebugGUI\DebugGUI.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\UnityServerHelper.cs" />
     <Compile Include="Assets\Scripts\Utility\Debugging\Console\Input\DebugCommand.cs" />
+    <Compile Include="Assets\ThirdParty\DebugGUI\Examples\DebugGUIExamples.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Client\SerializableObjectCacheSettings.cs" />
     <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerStateData.cs" />
+    <Compile Include="Assets\ThirdParty\DebugGUI\Attributes\DebugGUIPrintAttribute.cs" />
     <Compile Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\XmlUnityServer.cs" />
     <Compile Include="Assets\Scripts\Client\ReconciliationInfo.cs" />
     <Compile Include="Assets\Scripts\Server\ClientConnection.cs" />
     <Compile Include="Assets\Scripts\Client\PlayerInterpolation.cs" />
     <Compile Include="Assets\Scripts\Server\ServerInstance.cs" />
-    <Compile Include="Assets\Scripts\Utility\Debugging\DebugGraphs.cs" />
-    <Compile Include="Assets\ThirdParty\DebugGUI\Examples\DebugGUIExamples.cs" />
-    <Compile Include="Assets\ThirdParty\DebugGUI\DebugGUI.cs" />
-    <Compile Include="Assets\ThirdParty\DebugGUI\Attributes\DebugGUIPrintAttribute.cs" />
-    <Compile Include="Assets\ThirdParty\DebugGUI\Attributes\DebugGUIGraphAttribute.cs" />
+    <Compile Include="Assets\Scripts\Utility\Tags.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\PlayerFireWeaponData.cs" />
+    <Compile Include="Assets\Scripts\Common\NetworkingData\BulletHitData.cs" />
+    <Compile Include="Assets\Scripts\Client\Crosshair.cs" />
+    <Compile Include="Assets\Scripts\Common\Player\WeaponsCalculationHelper.cs" />
+    <Compile Include="Assets\Scripts\Client\Gameplay\BulletParticle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ThirdParty\DarkRift\DarkRift\Plugins\Server\DarkRift.Server.xml" />
